package dk.sdu.sesem4.common.data.map;

public class World {
}
