package dk.sdu.sesem4.melda.entities;

import com.badlogic.gdx.graphics.Texture;

public class Enemy extends Entity{

    @Override
    Texture loadImage() {
        return null;
    }
}
